--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,10 @@
   "projects": {
     "app4": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+  "@schematics/angular:component": {
+    "type": "component"   }  }
+,
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
